--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ napi-derive = "2.12.2"
 serde_json = "1.0"
 jsonschema = "0.17"
 emojis = "0.6.0"
+console = "0.15.7"
 
 [build-dependencies]
 napi-build = "2.0.1"
