--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0"
 jsonschema = "0.17"
 emojis = "0.6.0"
 console = "0.15.7"
+termcolor = "1.2.0"
 
 [build-dependencies]
 napi-build = "2.0.1"
