--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,17 @@ crate-type = ["cdylib"]
 
 [dependencies]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
-napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
-napi-derive = "2.12.2"
+napi = { version = "2", default-features = false, features = [
+  "napi4",
+  "serde-json",
+] }
+napi-derive = { version = "2", default-features = false }
+
 serde_json = "1.0"
 jsonschema = "0.17"
 emojis = "0.6.0"
 console = "0.15.7"
-termcolor = "1.2.0"
+regex = "1.8.3"
 
 [build-dependencies]
 napi-build = "2.0.1"
