--- a/npm/darwin-x64/package.json
+++ b/npm/darwin-x64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tarojs/doctor-darwin-x64",
+  "name": "@tarojs/plugin-doctor-darwin-x64",
   "version": "0.0.1",
   "os": [
     "darwin"
@@ -7,12 +7,13 @@
   "cpu": [
     "x64"
   ],
-  "main": "doctor.darwin-x64.node",
+  "main": "taro-doctor.darwin-x64.node",
   "files": [
-    "doctor.darwin-x64.node"
+    "taro-doctor.darwin-x64.node"
   ],
   "license": "MIT",
   "engines": {
     "node": ">= 10"
-  }
+  },
+  "repository": "https://github.com/NervJS/taro-doctor.git"
 }
