--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 edition = "2021"
 name = "tarojs_doctor"
-version = "0.0.0"
+version = "0.0.3"
+include = ["assets/**"]
 
 [lib]
 crate-type = ["cdylib"]
