--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
-  "rust-analyzer.linkedProjects": [
-    "./Cargo.toml",
-    "./Cargo.toml",
-    "./Cargo.toml"
-  ],
+  "rust-analyzer.linkedProjects": ["./Cargo.toml", "./Cargo.toml", "./Cargo.toml"],
   "rust-analyzer.showUnlinkedFileNotification": false
 }
