--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,17 +17,7 @@
     "sourceMap": false,
     "baseUrl": "."
   },
-  "include": [
-    "index.ts"
-  ],
-  "exclude": [
-    "__tests__",
-    "node_modules",
-    "dist",
-    "tests",
-    "jest",
-    "**/*.test.ts",
-    "**/*.spec.ts"
-  ],
+  "include": ["index.ts"],
+  "exclude": ["__tests__", "node_modules", "dist", "tests", "jest", "**/*.test.ts", "**/*.spec.ts"],
   "compileOnSave": false
 }
