--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "napi": {
     "name": "taro-doctor",
     "triples": {
+      "defaults": true,
       "additional": [
         "aarch64-apple-darwin",
         "aarch64-unknown-linux-gnu",
@@ -15,8 +16,8 @@
     }
   },
   "files": [
-    "src/validators/config_schema.json",
     "index.js",
+    "index.d.ts",
     "js-binding.js",
     "js-binding.d.ts"
   ],
