--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
         "aarch64-unknown-linux-gnu",
         "aarch64-unknown-linux-musl",
         "aarch64-pc-windows-msvc",
-        "i686-pc-windows-msvc"
+        "armv7-unknown-linux-gnueabihf",
+        "x86_64-unknown-linux-musl",
+        "x86_64-unknown-freebsd",
+        "i686-pc-windows-msvc",
+        "universal-apple-darwin"
       ]
     }
   },
