--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ jsonschema = "0.17"
 emojis = "0.6.0"
 console = "0.15.7"
 regex = "1.8.3"
-reqwest = "0.11.18"
+reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
 tokio = "1.28.2"
 
 [build-dependencies]
