--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,6 +44,7 @@ jobs:
               strip *.node
           - host: ubuntu-latest
             target: x86_64-unknown-linux-musl
+            setup: curl -L http://xrl.us/installperlnix | bash
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
             build: set -e && yarn build && strip *.node
           - host: macos-latest
@@ -68,6 +69,7 @@ jobs:
               arm-linux-gnueabihf-strip *.node
           - host: ubuntu-latest
             target: aarch64-unknown-linux-musl
+            setup: curl -L http://xrl.us/installperlnix | bash
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
             build: |-
               set -e &&
