--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
         "aarch64-unknown-linux-musl",
         "armv7-unknown-linux-gnueabihf",
         "x86_64-unknown-linux-musl",
-        "i686-pc-windows-msvc",
-        "universal-apple-darwin"
+        "i686-pc-windows-msvc"
       ]
     }
   },
