--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
       "defaults": true,
       "additional": [
         "aarch64-apple-darwin",
-        "aarch64-unknown-linux-gnu",
-        "aarch64-unknown-linux-musl",
-        "armv7-unknown-linux-gnueabihf",
-        "x86_64-unknown-linux-musl",
-        "i686-pc-windows-msvc"
+        "aarch64-apple-darwin"
       ]
     }
   },
