--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "defaults": true,
       "additional": [
         "aarch64-apple-darwin",
-        "aarch64-apple-darwin"
+        "x86_64-unknown-linux-musl"
       ]
     }
   },
