--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -216,6 +216,10 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
+    needs:
+      - test-macOS-windows-binding
+      - test-linux-x64-gnu-binding
+      - test-linux-x64-musl-binding
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
