--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "eslint": "8.41.0",
-    "glob": "10.2.6"
+    "eslint": "^9.12.0",
+    "glob": "10.2.6",
+    "stylelint": "^16.19.1"
   },
   "devDependencies": {
     "@napi-rs/cli": "^2.15.2",
